--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .container {
@@ -8,7 +9,36 @@
     margin: auto;
 }
 
-nav a {
-    text-decoration: none;
-    text-align: right;
+.sett-pgp {
+    display: flex;
+    justify-content: center;
+}
+
+.pgp {
+    border-top: #FFC700 15px solid;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
+    width: 390px;
+    height: 23px;
+    padding-top: 9px;
+}
+
+.pgp2 {
+    padding-top: 9px;
+    margin-left: 20px;
+    border-top: #FFC700 15px solid;
+    width: 390px;
+    height: 23px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
 }
