--- a/style.css
+++ b/style.css
@@ -42,3 +42,41 @@
     display: flex;
     align-items: center;
 }
+
+.text1 {
+    padding-left: 36px;
+    width: 640px;
+    height: 85px;
+    justify-content: center;
+    font-size: 39px;
+}
+
+.level-und {
+    text-align: center;
+    margin-top: 51px;
+}
+
+.but1 {
+    width: 310px;
+    height: 303px;
+    background-image: url(images/pass.svg);
+    background: repeat;
+}
+
+.but2 {
+    width: 310px;
+    height: 303px;
+    background-image: url(images/docum.svg);
+}
+
+.sett-but {
+    display: flex;
+    justify-content: center;
+    padding-top: 25px;
+}
+
+.pass {
+    margin-right: 20px;
+}
+
+.doccum {}
