--- a/style.css
+++ b/style.css
@@ -9,9 +9,30 @@
     margin: auto;
 }
 
-#cheaters img{
-    width: 250px;
+header{
+    display: flex;
+    justify-content: space-between;
 }
+
+.container nav{
+    margin-top: 50px;
+}
+
+.container a{
+    text-decoration: none;
+    color: #FFC700;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    margin-right: 45px;
+    
+}
+
+.container h3{
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    margin-top: 20px;
+}
+
 
 #cheaters{
     display: flex;
@@ -19,13 +40,25 @@
     justify-content: space-between;
 }
 
+#cheaters img{
+    margin-top: 20px;
+}
+
+h1{
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    margin-top: 72px;
+    margin-bottom: 25px;
+}
+
 #cheaters .cheater{
-    max-width: 25%;
+    width: 30%;
+    margin-top: 8px;
 }
 
 #cheaters p{
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 #cheaters h3{
