--- a/style.css
+++ b/style.css
@@ -4,6 +4,40 @@
     box-sizing: border-box;
 }
 
+.teach {
+    display: inline-block;
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    margin-right: 595px;
+}
+
+nav {
+    display: inline-block;
+}
+
+nav a {
+    color: #FFC700;
+    text-decoration: none;
+    margin-right: 45px;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 77px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+    margin-left: 230px;
+    padding-right: 250px;
+}
+
 .container {
     max-width: 1300px;
     margin: auto;
@@ -14,33 +48,27 @@
     justify-content: center;
 }
 
-.pgp {
-    border-top: #FFC700 15px solid;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
-    width: 390px;
-    height: 23px;
-    padding-top: 9px;
+.pgp div {
+    height: 15px;
+    padding-top: 6px;
+    width: 290px;
+    background-color: #FFC700;
 }
 
-.pgp2 {
-    padding-top: 9px;
-    margin-left: 20px;
-    border-top: #FFC700 15px solid;
-    width: 390px;
-    height: 23px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
+.pgp2 div {
+    height: 15px;
+    padding-top: 6px;
+    width: 290px;
+    background-color: #FFC700;
+}
+
+.pgp p {
+    font-size: 29px;
+    margin-right: 342px;
+}
+
+.pgp2 p {
+    font-size: 29px;
 }
 
 .text1 {
@@ -48,7 +76,7 @@
     width: 640px;
     height: 85px;
     justify-content: center;
-    font-size: 39px;
+    font-size: 35px;
 }
 
 .level-und {
@@ -57,16 +85,27 @@
 }
 
 .but1 {
+    padding-top: 213px;
     width: 310px;
     height: 303px;
     background-image: url(images/pass.svg);
-    background: repeat;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 109px;
+    font-size: 24px;
 }
 
 .but2 {
     width: 310px;
     height: 303px;
     background-image: url(images/docum.svg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 159px;
+    font-size: 24px;
+    padding-top: 213px;
 }
 
 .sett-but {
@@ -91,6 +130,6 @@
     width: 640px;
     height: 90px;
     background-color: #FFC700;
-    text-decoration: white;
-    font-size: 39px;
+    color: white;
+    font-size: 35px;
 }
