--- a/style.css
+++ b/style.css
@@ -30,12 +30,8 @@ h1 {
     font-weight: 600;
     font-size: 64px;
     line-height: 77px;
-    display: flex;
-    align-items: center;
     text-align: center;
     color: #000000;
-    margin-left: 230px;
-    padding-right: 250px;
 }
 
 .container {
@@ -135,4 +131,72 @@ h1 {
     color: white;
     font-size: 35px;
     border: none;
+}
+
+@media(max-width: 1300px) {
+    .container {
+        max-width: 900%;
+    }
+    .teach {
+        margin-right: 40%;
+    }
+}
+
+@media(max-width: 1064px) {
+    .teach {
+        margin-right: 20%;
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 1064px) {
+    .nav a {
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 836px) {
+    .teach {
+        margin-right: 5%;
+    }
+}
+
+@media(max-width: 1157px) {
+    h1 {
+        font-size: 50px;
+    }
+    .pgp p {
+        font-size: 20px;
+    }
+    .pgp2 p {
+        font-size: 20px;
+    }
+    .pgp div {}
+}
+
+@media(max-width: 1009px) {
+    h1 {
+        font-size: 40px;
+        line-height: 60px;
+    }
+}
+
+@media(max-width: 903px) {
+    h1 {
+        font-size: 30px;
+        line-height: 50px;
+    }
+}
+
+@media(max-width: 797px) {
+    h1 {
+        font-size: 20px;
+        line-height: 40px;
+    }
+}
+
+@media() {
+    .pgp {
+        font-size: 200px;
+    }
 }
