--- a/style.css
+++ b/style.css
@@ -69,9 +69,12 @@ header{
     margin-bottom: 25px;
 }
 
+img{
+    max-width: 100%;
+}
+
 #teachers .teacher{
     width: 30%;
-    margin-left: 5px;
     margin-bottom: 50px;
     background: #FFFFFF;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
@@ -81,12 +84,15 @@ header{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 22px;
+    margin-left: 5px;
+    margin-bottom: 3px;
 }
 
 #teachers h3{
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     margin-top: 5px;
+    margin-left: 5px;
     font-size: 22px;
 }
 
@@ -94,4 +100,51 @@ header{
     margin-bottom: 3px;
 }
 
-@media()
+@media(max-width: 995px){
+    .container{
+        max-width: 90%;
+    }
+    #teachers p{
+        font-size: 19px;
+    }
+    #bodddy h1{
+        margin-left: 15px;
+        margin-right: 10px;
+    }
+    #bodddy form{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    #bodddy button{
+        margin-left: 10px;
+    }
+}
+
+@media(max-width: 814px){
+    #teachers p, #teachers h3{
+        font-size: 19px;
+    }
+}
+
+@media(max-width:725px){
+    #teachers .teacher{
+    width: 45%;
+}
+}
+
+@media(max-width: 550px){
+    #teachers .teacher{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+    #teachers p, #teachers h3{
+        font-size: 22px;
+    }
+    ::placeholder{
+      font-size : 25px;
+    }
+    #bodddy input{
+        padding-left: 7px;
+    }
+
+}
