--- a/style.css
+++ b/style.css
@@ -99,9 +99,37 @@ img{
     margin-bottom: 3px;
 }
 
+#teachers .pavel, #teachers .aleksandr, #teachers .maria{
+    margin-bottom: 30px;
+}
+
 #links .link{
     display: flex;
     justify-content: center;
+}
+
+#links a{
+    text-decoration: none;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 15px;
+    font-size: 20px;
+    line-height: 18px;
+    color: #000000;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+}
+
+#links .back{
+    margin-right: 15px;
+    font-size: 15px;
+    border-bottom:  1px solid #FFC700;
+}
+
+#links .go{
+    margin-left: 15px;
+    font-size: 15px;
+    border-bottom:  1px solid #FFC700;
 }
 
 @media(max-width:1080px){
@@ -142,7 +170,10 @@ img{
 @media(max-width:725px){
     #teachers .teacher{
     width: 45%;
-}
+    }
+    #teachers .pavel, #teachers .aleksandr, #teachers .maria{
+        margin-bottom: 50px;
+    }
 }
 
 @media(max-width: 550px){
@@ -177,7 +208,13 @@ img{
         padding-top: 15px;
         padding-bottom: 15px;
     }
-
+    #links a{
+        margin-left: 3px;
+        margin-right: 3px;
+        margin-top: 15px;
+        font-size: 20px;
+        line-height: 18px;
+    }
 }
 
 @media(max-width:320px){
