--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    margin-right:595px; 
+    text-decoration: none;
 }
 
 header{
@@ -48,6 +48,7 @@ h1{
     background-position: right 50px  ;
     padding-bottom:247px ;
     padding-top:251px ;
+   
 }
 
 .container{
@@ -201,6 +202,8 @@ h1{
 
 .desk{
     background-image: url(images/desk.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -214,4 +217,138 @@ h1{
     font-size: 36px;
     color: #FFFFFF;
     width: 992px;
+}
+
+footer{
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.firma{
+    padding-top: 62px;
+}
+
+#down a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+.firma{
+    display: flex;
+    justify-content: space-between;
+}
+
+.taught{
+    display: flex;
+    justify-content: space-between;
+}
+
+.tech{
+    background: #454545;
+    width: 310px;
+    height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
+}
+
+#cheater{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+#bodddy form{
+    display: flex;
+    justify-content: space-between;
+    height: 65px;
+    margin-top: 25px;
+    margin-bottom: 55px;
+}
+
+#bodddy input{
+    width: 70%;
+    background: #fff;
+    padding-left: 36px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+}
+
+#bodddy button{
+  height: 65px;
+  width: 310px;
+  background: #FFC700;
+  cursor: pointer;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+#bodddy input, button{
+    border-radius: 5px;
+}
+
+#bodddy button{
+    border-radius: 5px;
+    border-color: #FFC700;
+}
+
+#teachers{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background: #ffff;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
+    margin-top: 98px;
+}
+
+#teachers img{
+    margin-top: 20px;
+}
+
+#bodddy h1{
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    margin-top: 72px;
+    margin-bottom: 25px;
+}
+
+img{
+    max-width: 100%;
+}
+
+#teachers .teacher{
+    width: 30%;
+    margin-bottom: 50px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
+}
+
+#teachers p{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    margin-left: 5px;
+    margin-bottom: 3px;
+}
+
+#teachers h3{
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 22px;
+}
+
+#cheaters .star{
+    margin-bottom: 3px;
 }
