--- a/tex.css
+++ b/tex.css
@@ -17,13 +17,18 @@ header{
     justify-content: space-between;
 }
 
+nav{
+    display: inline-block;
+}
+
 .teach {
     display: inline-block;
     color: #000000;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    margin-right: 595px;
+    margin-right: 30px;
+    text-decoration: none;
 }
 
 nav a{
@@ -42,8 +47,10 @@ footer{
 
 .firma{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
+
+
 
 #down a{
     font-style: normal;
@@ -76,10 +83,26 @@ footer{
 
 h1{
     margin-top: 200px;
-    font-size: 50px;
+    font-size: 20px;
+    text-align: center;
 }
 p{
     margin-bottom: 200px;
-    font-size: 70px;
+    font-size: 40px;
     color: #454545;
+    text-align: center;
+}
+
+@media(max-width:425px){
+    nav a{
+        margin-right: 10px;
+        font-size: 15px;
+    }
+}
+
+@media(max-width:320px){
+    nav a{
+        margin-right: 5px;
+        font-size: 10px;
+    }
 }
