--- a/stas.css
+++ b/stas.css
@@ -9,13 +9,18 @@ body {
     
 }
 
+header{
+    max-width: 1500px;
+}
+
 .teach {
     display: inline-block;
+    text-decoration: none;
     color: #000000;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    margin-right: 595px;
+    padding-right: 350px;
 }
 
 nav {
@@ -118,14 +123,7 @@ footer{
     justify-content: space-between;
 }
 
-.teach {
-    display: inline-block;
-    color: #000000;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    text-decoration: none;
-}
+
 
 nav a{
     color: #FFC700;
@@ -258,5 +256,11 @@ footer{
     .ter{
         width: 320px;
         
+    }
+}
+
+@media(max-width:375px){
+    #down a{
+        font-size: 18px;
     }
 }
