--- a/review.css
+++ b/review.css
@@ -9,28 +9,164 @@
     margin: auto;
 }
 
+nav {
+    display: inline-block;
+}
+
+nav a {
+    color: #FFC700;
+    text-decoration: none;
+    margin-right: 45px;
+    font-weight: normal;
+    font-size: 24px;
+}
+
 #reviews .review{
     display: flex;
+    margin-top: 20px;
     margin-bottom: 20px;
     border:  1px solid #FFC700;
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto ;
 }
 
 #reviews .picture{
-    width: 30%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
 }
 
 #reviews .about{
-    width: 70%;
+    margin-left: 20px;
+}
+
+#reviews .date{
+    margin-top: 5px;
+    font-weight: medium ;
 }
 
 #reviews h2{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
+    margin-top: 7px;
     margin-bottom: 3px;
+    font-size: 25px;
 }
 
 #reviews p{
     font-family: 'Inter', sans-serif;
     font-weight: 300;
     margin-bottom: 3px;
+    font-size: 20px;
+}
+
+#link_2 .link{
+    display: flex;
+    justify-content: center;
+}
+
+#link_2 a{
+    text-decoration: none;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 18px;
+    color: #000000;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+}
+
+#link_2 .back{
+    margin-right: 15px;
+    font-size: 15px;
+    border-bottom:  1px solid #FFC700;
+}
+
+#link_2 .go{
+    margin-left: 15px;
+    font-size: 15px;
+    border-bottom:  1px solid #FFC700;
+}
+
+footer{
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.firma{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.firma{
+    padding-top: 62px;
+    padding-bottom: 62px;
+}
+
+.down a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+.teach {
+    display: inline-block;
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    margin-right: 30px;
+    text-decoration: none;
+}
+
+.taught{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media(max-width:800px){
+    .container{
+        max-width: 90%;
+    }
+    #reviews h2{
+        font-size: 20px;
+    }
+    #reviews .about{
+        margin-left: 12px;
+    }
+}
+
+@media(max-width:695px){
+    #reviews h2{
+        font-size: 17px;
+    }
+    #reviews p{
+        font-size: 15px;
+    }
+}
+
+@media(max-width: 570px){
+    #reviews h2{
+        font-size: 15px;
+    }
+    #reviews p{
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 400px){
+    #reviews h2{
+        font-size: 15px;
+        margin-top: 5px;
+    }
+    #reviews p{
+        font-size: 11px;
+    }
+    
 }
