--- a/tex.css
+++ b/tex.css
@@ -4,20 +4,21 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Inter', sans-serif;;
+body {
+    font-family: 'Inter', sans-serif;
+    ;
 }
 
-header{
-    margin-top:55px ;
+header {
+    margin-top: 55px;
 }
 
-.taught{
+.taught {
     display: flex;
     justify-content: space-between;
 }
 
-nav{
+nav {
     display: inline-block;
 }
 
@@ -31,47 +32,40 @@ nav{
     text-decoration: none;
 }
 
-nav a{
+nav a {
     color: #FFC700;
     text-decoration: none;
-    margin-right:45px ;
+    margin-right: 45px;
     font-weight: normal;
     font-size: 24px;
 }
 
-footer{
+footer {
+    margin-top: 30px;
     background: rgba(255, 199, 0, 0.4);
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.firma{
-    display: flex;
-    justify-content: center;
+.firma {
+    padding-top: 62px;
 }
 
-
-
-#down a{
+#down a {
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     color: black;
 }
 
-.firma{
-    padding-top: 62px;
-}
-
-#cheater{
+.firma {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
-.tech{
+.tech {
     background: #454545;
-    width: 310px;
-    height: 50px;
+    display: inline-block;
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 300;
@@ -81,28 +75,99 @@ footer{
     margin-bottom: 113px;
 }
 
-h1{
+#cheater {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#down a {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+h1 {
     margin-top: 200px;
     font-size: 20px;
     text-align: center;
 }
-p{
+
+p {
     margin-bottom: 200px;
     font-size: 40px;
     color: #454545;
     text-align: center;
 }
 
-@media(max-width:425px){
-    nav a{
+@media(max-width:425px) {
+    nav a {
         margin-right: 10px;
         font-size: 15px;
     }
 }
 
-@media(max-width:320px){
-    nav a{
+@media(max-width:320px) {
+    nav a {
         margin-right: 5px;
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 768px) {
+    #down a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        color: black;
+    }
+    nav a {
+        font-size: 18px;
+    }
+    .teach {
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 425px) {
+    #down a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 13px;
+        color: black;
+        margin-left: 1px;
+    }
+    nav a {
+        font-size: 13px;
+    }
+    .teach {
+        font-size: 13px;
+    }
+    .tech {
+        background: #454545;
+        display: inline-block;
+        text-decoration: none;
+        color: #FFFFFF;
+        font-weight: 300;
+        font-size: 13px;
+        padding: 10px 50px;
+        margin-top: 54px;
+        margin-bottom: 113px;
+    }
+}
+
+@media(max-width:375px) {
+    #down a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        color: black;
+        margin-left: 1px;
+    }
+    .teach {
+        font-size: 10px;
+    }
+    nav a {
         font-size: 10px;
     }
 }
