--- a/style.css
+++ b/style.css
@@ -8,19 +8,17 @@ body{
     font-family: 'Inter', sans-serif;;
 }
 
-.container{
-    max-width: 1300px;
-    margin: auto;
-}
-
-p{
+.teach{
     display: inline-block;
     color: #000000;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    margin-right:594px; 
-    margin-bottom: 241px;
+    text-decoration: none;
+}
+
+header{
+    margin-top:55px ;
 }
 
 nav{
@@ -30,7 +28,9 @@ nav{
 nav a{
     color: #FFC700;
     text-decoration: none;
-    margin-right:42px ;
+    margin-right:45px ;
+    font-weight: normal;
+    font-size: 24px;
 }
 
 h1{
@@ -38,14 +38,390 @@ h1{
    font-weight: 600;
    font-size: 64px;
    color: #000000;
-   width:803px ;
+}
+
+#teacher{
+    background-image: url(images/teacher.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right 50px  ;
+    padding-bottom:247px ;
+    padding-top:251px ;
+   
 }
 
 .container{
     max-width:1300px ;
     margin: auto;
-    background-image: url(images/teacher.png);
-    background-size: contain;
+}
+
+#teacher .found{
+    display: inline-block;
+    background: #FFC700;
+    width: 250px;
+    height: 75px;
+    color: #FFFFFF;
+    font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 27px;
+    margin-top: 51px;
+    margin-right:40px ;
+}
+
+#teacher .become{
+    display: inline-block;
+    background: #FFFFFF;
+    width: 250px;
+    height: 75px;
+    color: #FFC700;
+    font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 26px;
+    margin-top: 51px;
+    border: 1px  #FFC700 solid;
+}
+
+.predmetbg{
+    background: rgba(255, 199, 0, 0.3);
+    text-align: center;
+    padding-top:55px ;
+}
+
+.predmetbg h3{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    color: #222222;
+    margin-bottom: 35px;
+}
+
+.predmet{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.predmet a{
+    display: flex;
+    width: 22%;
+    height: 133px;
+    background: #FFC700;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    margin-bottom:40px ;
+}
+
+.look{
+    border: 1px #FFC700 solid ;
+    background: #FFFFFF;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color:#FFC700 ;
+    margin-top: 35px;
+    display: inline-block;
+    text-decoration: none;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    padding-left: 7%;
+    padding-right: 7%;
+    margin-bottom: 50px;
+}
+
+.pumba{
+    text-align: right;
+}
+
+.review{
+    text-align: center;
+    color: #222222;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;    
+}
+
+.comment{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 49%;
+    border: 2px #FFC700 solid;
+    margin-top: 20px;
+}
+
+.dog{
+    width: 20%;
+}
+
+.text{
+    width: 70%;
+}
+
+.allcomments{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.person{
+    width: 120px;
+}
+
+.goblin{
+    width: 120px;
+}
+
+.tree{
+    width: 140px;
+}
+
+.date{
+    color: rgba(0, 0, 0, 0.7);
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+}
+
+.name{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+}
+
+.desk{
+    background-image: url(images/desk.png);
     background-repeat: no-repeat;
-    background-position: 20% 80% ;
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 100px;
+    padding-top:10% ;
+    padding-bottom: 10%;
+}
+
+.our{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    color: #FFFFFF;
+}
+
+footer{
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.firma{
+    padding-top: 62px;
+}
+
+#down a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+.firma{
+    display: flex;
+    justify-content: space-between;
+}
+
+.taught{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.tech{
+    background: #454545;
+    width: 310px;
+    height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
+}
+
+#cheater{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+#bodddy form{
+    display: flex;
+    justify-content: space-between;
+    height: 65px;
+    margin-top: 25px;
+    margin-bottom: 55px;
+}
+
+#bodddy input{
+    width: 70%;
+    background: #fff;
+    padding-left: 36px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+}
+
+#bodddy button{
+  height: 65px;
+  width: 310px;
+  background: #FFC700;
+  cursor: pointer;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+#bodddy input, button{
+    border-radius: 5px;
+}
+
+#bodddy button{
+    border-radius: 5px;
+    border-color: #FFC700;
+}
+
+#teachers{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background: #ffff;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
+    margin-top: 98px;
+}
+
+#teachers img{
+    margin-top: 20px;
+}
+
+#bodddy h1{
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    margin-top: 72px;
+    margin-bottom: 25px;
+}
+
+img{
+    max-width: 100%;
+}
+
+#teachers .teacher{
+    width: 30%;
+    margin-bottom: 50px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
+}
+
+#teachers p{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    margin-left: 5px;
+    margin-bottom: 3px;
+}
+
+#teachers h3{
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 22px;
+}
+
+#cheaters .star{
+    margin-bottom: 3px;
+}
+
+@media ( max-width:1024px){
+    .container{
+        max-width:98% ;
+    }
+
+    .our{
+        font-size: 20px;
+    }
+}
+
+@media ( max-width:768px){
+     .predmet a{
+         font-size: 25px;
+     }
+
+     .teach{
+         font-size: 20px;
+     }
+
+     h1{
+         font-size: 45px;
+     }
+     #teachers .teacher{
+        width:45%;
+    }
+}
+
+@media (max-width:425px){
+    #teachers .teacher{
+        width:98%;
+    }
+
+    .teach,.taught{
+        display: block;
+    }
+
+    .comment{
+        width:98%;
+    }
+
+    .predmet a{
+        width: 45%;
+    }
+    
+    nav a{
+        margin-right:5px;
+        font-size:20px ;
+    }
+
+    #down a{
+        font-size: 15px;
+    }
+
+    .firma .teach{
+        font-size: 15px;
+    }
+
+    #teacher{
+        padding-bottom:50px;
+    }
+}
+
+
+@media (max-width:375px){
+    #teachers .teacher{
+        width:95%;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    .predmet a{
+        width: 98%;
+    }
 }
