--- a/teachers.css
+++ b/teachers.css
@@ -158,6 +158,47 @@ img{
     border-bottom:  1px solid #FFC700;
 }
 
+footer{
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.firma{
+    padding-top: 62px;
+}
+
+#down a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+.firma{
+    display: flex;
+    justify-content: space-between;
+}
+
+.taught{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.tech{
+    background: #454545;
+    width: 310px;
+    height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
+}
+
 @media(max-width:1080px){
     .container{
         max-width: 90%;
