--- a/teachers.css
+++ b/teachers.css
@@ -1,27 +1,46 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.container {
+.container{
     max-width: 1300px;
     margin: auto;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
+#bodddy header{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
-#bodddy form {
+#bodddy .taught{
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
+
+#bodddy nav{
+   display: inline-block;
+}
+
+#bodddy nav a {
+    color: #FFC700;
+    text-decoration: none;
+    margin-right: 45px;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+#bodddy form{
     display: flex;
     justify-content: space-between;
     margin-top: 25px;
     margin-bottom: 55px;
 }
 
-#bodddy input {
+#bodddy input{
     width: 70%;
     background: #fff;
     padding-left: 36px;
@@ -30,27 +49,27 @@ header {
     font-size: 24px;
 }
 
-#bodddy button {
-    height: 65px;
-    width: 310px;
-    background: #FFC700;
-    cursor: pointer;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 24px;
+#bodddy button{
+  height: 65px;
+  width: 310px;
+  background: #FFC700;
+  cursor: pointer;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
 }
 
-#bodddy input,
-button {
+#bodddy input, button{
     border-radius: 5px;
 }
 
-#bodddy button {
+#bodddy button{
     border-radius: 5px;
     border-color: #FFC700;
+    border: none;
 }
 
-#teachers {
+#teachers{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -58,29 +77,29 @@ button {
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
 }
 
-#teachers img {
+#teachers img{
     margin-top: 20px;
 }
 
-#bodddy h1 {
+#bodddy h1{
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     margin-top: 72px;
     margin-bottom: 25px;
 }
 
-img {
+img{
     max-width: 100%;
 }
 
-#teachers .teacher {
+#teachers .teacher{
     width: 30%;
     margin-bottom: 50px;
     background: #FFFFFF;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
 }
 
-#teachers p {
+#teachers p{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 22px;
@@ -88,7 +107,7 @@ img {
     margin-bottom: 3px;
 }
 
-#teachers h3 {
+#teachers h3{
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     margin-top: 5px;
@@ -96,26 +115,25 @@ img {
     font-size: 22px;
 }
 
-#cheaters .star {
+#cheaters .star{
     margin-bottom: 3px;
 }
 
-#teachers .pavel,
-#teachers .aleksandr,
-#teachers .maria {
+#teachers .pavel, #teachers .aleksandr, #teachers .maria{
     margin-bottom: 30px;
 }
 
-#links .link {
+#links .link{
     display: flex;
     justify-content: center;
 }
 
-#links a {
+#links a{
     text-decoration: none;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 20px;
+    margin-bottom: 10px;
     font-size: 20px;
     line-height: 18px;
     color: #000000;
@@ -123,81 +141,227 @@ img {
     font-weight: 500;
 }
 
-#links .back {
+#links .back{
     margin-right: 15px;
     font-size: 15px;
-    border-bottom: 1px solid #FFC700;
+    border-bottom:  1px solid #FFC700;
 }
 
-#links .go {
+#links .go{
     margin-left: 15px;
     font-size: 15px;
-    border-bottom: 1px solid #FFC700;
+    border-bottom:  1px solid #FFC700;
 }
 
-@media(max-width:1080px) {
-    .container {
+footer{
+    background: rgba(255, 199, 0, 0.4);
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
+
+#last-teachers .firma{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 62px;
+    padding-bottom: 62px;
+}
+
+#last-teachers .down a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: black;
+}
+
+#last-teachers .teach {
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+#help .tech{
+    background: #454545;
+    width: 310px;
+    height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
+}
+
+@media(max-width:1240px){
+    .container{
         max-width: 90%;
     }
-    #bodddy button {
-        margin-left: 20px;
+    #last-teachers .teach{
+        font-size: 30px;
     }
 }
 
-@media(max-width: 995px) {
-    .container {
-        max-width: 90%;
+@media(max-width:1080px){
+    #bodddy button{
+        margin-left: 40px;
     }
-    #teachers p {
+    #bodddy nav a{
+        font-size: 25px; 
+    }
+    #bodddy .teach{
+        font-size: 25px;
+    }
+    #last-teachers .down a{
+        font-size: 25px;
+    }
+    #last-teachers .teach{
+        font-size: 25px;
+    }
+}
+
+@media(max-width: 1000px){
+    #teachers p{
         font-size: 19px;
     }
-    #bodddy h1 {
+    #bodddy h1{
         margin-left: 15px;
         margin-right: 10px;
     }
-    #bodddy form {
+    #bodddy form{
         margin-left: 15px;
         margin-right: 15px;
     }
-    #bodddy button {
+    #bodddy button{
         margin-left: 10px;
     }
+    #bodddy nav a{
+        font-size: 20px;
+        margin-right: 10px; 
+    }
+    #last-teachers .down a{
+        font-size: 20px;
+        margin-right: 10px;
+    }
 }
 
-@media(max-width: 814px) {
-    #teachers p,
-    #teachers h3 {
+@media(max-width:900px){
+    #last-teachers .down a{
+        font-size: 20px;
+        margin-right: 20px;
+    }
+    #bodddy nav a{
+        font-size: 20px; 
+        margin-right: 20px;
+    }
+    #bodddy .teach{
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 815px){
+    #teachers p, #teachers h3{
         font-size: 19px;
     }
+    #reviews .review{
+        max-width: 70%;
+    }
+    #bodddy nav a{
+        font-size: 20px;
+        margin-right:15px;
+    }
+    #last-teachers .down a{
+        font-size: 20px;
+        margin-right: 12px;
+    }
+    #last-teachers .teach{
+        font-size: 19px;
+    }
+    #bodddy .teach{
+        font-size: 19px;
+    }
+    #reviews h2{
+        font-size: 20px;
+    }
+    #reviews .about{
+        margin-left: 12px;
+    }
 }
 
-@media(max-width:725px) {
-    #teachers .teacher {
-        width: 45%;
+@media(max-width:725px){
+    #teachers .teacher{
+    width: 45%;
     }
-    #teachers .pavel,
-    #teachers .aleksandr,
-    #teachers .maria {
+    #teachers .pavel, #teachers .aleksandr, #teachers .maria{
         margin-bottom: 50px;
     }
+    #bodddy nav a{
+        font-size: 18px;
+        margin-right:9px;
+    }
+    #bodddy .teach{
+        font-size: 19px;
+    }
+    #last-teachers .teach{
+        font-size: 16px;
+    }
+    #last-teachers .down a{
+        font-size: 18px;
+        margin-right: 7px;
+    }
+    #reviews h2{
+        font-size: 17px;
+    }
+    #reviews p{
+        font-size: 15px;
+    }
 }
 
-@media(max-width: 550px) {
-    #teachers .teacher {
+@media(max-width: 600px){
+    #reviews .review{
+        max-width: 60%;
+    }
+    #bodddy nav a{
+        font-size: 15px;
+        margin-right:9px;
+    }
+    #bodddy .teach{
+        font-size: 16px;
+    }
+    #last-teachers .teach{
+        font-size: 15px;
+    }
+    #last-teachers .down a{
+        font-size: 15px;
+        margin-right: 8px;
+    }
+    #reviews h2{
+        font-size: 15px;
+    }
+    #reviews p{
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 550px){
+    #teachers .teacher{
         width: 95%;
         margin-bottom: 20px;
     }
-    #teachers p,
-    #teachers h3 {
+    #teachers p, #teachers h3{
         font-size: 25px;
     }
-    #bodddy form {
+    #bodddy form{
         flex-direction: column;
     }
-     ::placeholder {
-        font-size: 25px;
+    ::placeholder{
+      font-size : 25px;
     }
-    #bodddy input {
+    #bodddy input{
         padding-left: 7px;
         width: 80%;
         font-size: 25px;
@@ -205,7 +369,7 @@ img {
         padding-bottom: 15px;
         padding-left: 10px;
     }
-    #bodddy button {
+    #bodddy button{
         background: #FFC700;
         width: 80%;
         font-size: 25px;
@@ -215,23 +379,107 @@ img {
         padding-top: 15px;
         padding-bottom: 15px;
     }
-    #links a {
+    #links a{
         margin-left: 3px;
         margin-right: 3px;
         margin-top: 15px;
         font-size: 20px;
         line-height: 18px;
     }
+    #bodddy nav a{
+        font-size: 13px;
+        margin-right:4px;
+    }
+    #bodddy .teach{
+        font-size: 12px;
+        margin-top: 4px;
+    }
+    #last-teachers .teach{
+        font-size: 10px;
+    }
+    #last-teachers .down a{
+        font-size: 12px;
+        margin-right: 2px;
+    }
+    #reviews h2{
+        font-size: 15px;
+        margin-top: 5px;
+    }
+    #reviews p{
+        font-size: 11px;
+    }
+    #reviews .review{
+        max-width: 70%;
+    }
 }
 
-@media(max-width:320px) {
-     ::placeholder {
-        font-size: 25px;
+@media(max-width: 400px){
+    #bodddy nav a{
+        font-size:10px;
+        margin-right:1px;
+        font-weight: bolder;
     }
-    #bodddy input {
-        width: 100%;
+    #bodddy .teach{
+        font-size: 10px;
+        margin-top: 5px;
+        font-weight: bold;
     }
-    #bodddy button {
-        width: 100%;
+    #last-teachers .teach{
+        font-size: 8px;
+        font-weight: bolder;
+    }
+    #last-teachers .down a{
+        font-size: 9px;
+        margin-right: 2px;
+        font-weight: bolder;
+    }
+    #reviews h2{
+        font-size: 13px;
+        margin-top: 5px;
+    }
+    #reviews p{
+        font-size: 10px;
+    }
+    #reviews .review{
+        max-width: 90%;
+    }
+    #link_2 a{
+        margin-left: 3px;
+        margin-right: 3px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 15px;
+        line-height: 18px;
+        color: #000000;
+        font-family: 'Inter', sans-serif;
+        font-weight: 500;
+    }
+    #link_2 .back{
+        font-size: 13px;
+    }
+    
+    #link_2 .go{
+        font-size: 13px;
     }
 }
+
+@media(max-width:320px){
+    ::placeholder{
+        font-size : 25px;
+      }
+      #bodddy input{
+        width: 100%;
+      }
+      #bodddy button{
+        width: 100%;
+      }
+      #last-teachers .teach{
+        font-size: 8px;
+        font-weight: bolder;
+    }
+    #last-teachers .down a{
+        font-size: 9px;
+        margin-right: 1px;
+        font-weight: bolder;
+    }
+  }
