--- a/review.css
+++ b/review.css
@@ -138,7 +138,7 @@ footer {
         justify-content: space-between;
     }
     
-    .tech {
+    #support .tech {
         background: #454545;
         display: inline-block;
         text-decoration: none;
